# LockForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CommandHandler.hpp  Crypt.hpp  FileHandler.hpp  Hash.hpp  InputManager.hpp  PathHandler.hpp
src/: CommandHandler.cpp  Crypt.cpp  FileHandler.cpp  Hash.cpp  InputManager.cpp  PathHandler.cpp  main.cpp
